@@ -1,4 +1,6 @@
 1.5.0
+* Qdb: added "volatile mode" in which records are being written to disk only when closing the database
+* Client: "client -r" rebuilds UTXO database in a volatile mode (should be much faster) and exits
 * Headers-first blockchain sync
 * ripemd160 and snappy libs has been included in the sources (GitHub repo)
 
